# twitter-rest-api-rust

./: .env  Cargo.toml  README.md  docker-compose.yaml
migrations/2025-05-27-164723_generate_tweets_and_likes/: down.sql  up.sql
src/: like.rs  main.rs  response.rs  schema.rs  tweet.rs
src/controller/: like_controller.rs  mod.rs  tweet_controller.rs
src/domain/: like.rs  tweet.rs
