[package]
name = "twitter-rest-api-rust"
authors = ["Juan Camilo Velandia Botello <jcamilovelandiab@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
